<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
            android:background="#3F6EA8"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <TextView
                    android:fontFamily="@font/passion_one"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/ingresar"
                    android:textColor="#FFF"
                    android:textSize="50sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
    </FrameLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:background="#4487D9"
                android:padding="40dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:paddingBottom="20dp"
                    android:layout_weight="3"
                    android:src="@drawable/logo"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
            <EditText
                    android:textColor="#000"
                    android:id="@+id/et_correo"
                    android:drawableLeft="@drawable/email"
                    android:paddingLeft="15dp"
                    android:drawablePadding="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/passion_one"
                    android:layout_margin="10dp"
                    android:textColorHint="#D1D1D1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/correo"
                    android:textSize="30sp"
                    android:background="@drawable/et_bg"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
            <EditText
                    android:textColor="#000"
                    android:inputType="textPassword"
                    android:id="@+id/et_contrasena"
                    android:drawableLeft="@drawable/key"
                    android:paddingLeft="15dp"
                    android:drawablePadding="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/passion_one"
                    android:textColorHint="#D1D1D1"
                    android:layout_margin="10dp"
                    android:hint="@string/contrase_a"
                    android:textSize="30sp"
                    android:background="@drawable/et_bg"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
            <Button
                    android:layout_weight="0.3"
                    android:textAllCaps="false"
                    android:text="Ingresar"
                    android:layout_margin="10dp"
                    android:textColor="#FFF"
                    android:background="@drawable/bt_bg"
                    android:fontFamily="@font/passion_one"
                    android:textSize="35sp"
                    android:id="@+id/bt_ingresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>